nie instalujemy ikonek i linka gdy nie mamy praw zapisu do /usr/share
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1184 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -536,19 +536,33 @@ uninstall-am: uninstall-binPROGRAMS uninstall-info-am uninstall-local
 	$(QTMOCDIR)/moc -o $@ $<
 
 install-data-local:
-		$(mkinstalldirs) "$(DESTDIR)/usr/share/applnk/Internet/";
-		echo "[Desktop Entry]" > "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop";
-		echo "Type=Application" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop";
-		echo "Exec=$(bindir)/kadu" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop";
-		echo "Icon=kadu.png" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop";
-		echo "MiniIcon=kadu_mini.png" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop";
-		echo "Terminal=0" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop";
-		echo "Name=Kadu" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop";
-		$(mkinstalldirs) "$(DESTDIR)/usr/share/pixmaps/";
-		$(INSTALL_DATA) hi48-app-kadu.png "$(DESTDIR)/usr/share/pixmaps/kadu_big.png";
-		$(INSTALL_DATA) hi32-app-kadu.png "$(DESTDIR)/usr/share/pixmaps/kadu.png";
-		$(INSTALL_DATA) hi16-app-kadu.png "$(DESTDIR)/usr/share/pixmaps/kadu_mini.png";
-
+	@if test -w "/usr/share"; then \
+		$(mkinstalldirs) "$(DESTDIR)/usr/share/applnk/Internet/"; \
+		echo "[Desktop Entry]" > "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"; \
+		echo "Type=Application" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"; \
+		echo "Exec=$(bindir)/kadu" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"; \
+		echo "Icon=kadu.png" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"; \
+		echo "MiniIcon=kadu_mini.png" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"; \
+		echo "Terminal=0" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"; \
+		echo "Name=Kadu" >> "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"; \
+		$(mkinstalldirs) "$(DESTDIR)/usr/share/pixmaps/"; \
+		$(INSTALL_DATA) hi48-app-kadu.png "$(DESTDIR)/usr/share/pixmaps/kadu_big.png"; \
+		$(INSTALL_DATA) hi32-app-kadu.png "$(DESTDIR)/usr/share/pixmaps/kadu.png"; \
+		$(INSTALL_DATA) hi16-app-kadu.png "$(DESTDIR)/usr/share/pixmaps/kadu_mini.png"; \
+		echo ""; \
+		echo "Icons installed to $(DESTDIR)/usr/share/pixmaps"; \
+		echo "Link(kadu.desktop) installed to $(DESTDIR)/usr/share/applnk/Internet"; \
+		echo ""; \
+	else \
+		echo "";\
+		echo "         *******************************************************************"; \
+		echo "         *                                                                 *"; \
+		echo "         *          You don't have permission to write /usr/share          *"; \
+		echo "         *          Icons and link(kadu.desktop) not be installed          *"; \
+		echo "         *                                                                 *"; \
+		echo "         *******************************************************************"; \
+		echo "";\
+	fi;
 uninstall-local:
 	rm -f "$(DESTDIR)/usr/share/applnk/Internet/kadu.desktop"
 	rm -f "$(DESTDIR)/usr/share/pixmaps/kadu_big.png"
