Kali miec krowa
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1192 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -82,7 +82,7 @@ install-data-local:
 		echo "         *******************************************************************"; \
 		echo "         *                                                                 *"; \
 		echo "         *          You don't have permission to write /usr/share          *"; \
-		echo "         *          Icons and link(kadu.desktop) not be installed          *"; \
+		echo "         *          Icons and link(kadu.desktop) won't be installed          *"; \
 		echo "         *                                                                 *"; \
 		echo "         *******************************************************************"; \
 		echo "";\
