wersja paczki kadu pobierana jest z pliku VERSION
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1211 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/debian/rules
+++ b/debian/rules
@@ -66,6 +66,8 @@ binary-indep: build install
 #Nothing
 
 binary-arch: build install
+#Tu ustawiamy(podmieniamy) w changelog'u wersje paczki kadu
+	cat debian/changelog |sed -e "s/<wersja>/`cat VERSION`/g" > debian/changelog
 	dh_testdir
 	dh_testroot
 	dh_movefiles
