--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -45,9 +45,9 @@ endif
 
 #kadu_METASOURCES = AUTO
 
-INCLUDES = $(QTINCDIR)
+INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
 kadu_LDADD = $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
-kadu_LDFLAGS = $(PTHREAD_LDFLAGS)
+kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LDFLAGS)
 kadu_DEPENDENCIES = $(SIM)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
