--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -95,7 +95,10 @@ LTLIBICONV = @LTLIBICONV@
 LTLIBINTL = @LTLIBINTL@
 MKINSTALLDIRS = @MKINSTALLDIRS@
 MY_SUBDIRS = @MY_SUBDIRS@
+OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
+OPENSSL_LIBS = @OPENSSL_LIBS@
 PACKAGE = @PACKAGE@
+PKGCONFIG = @PKGCONFIG@
 PNG_LIBS = @PNG_LIBS@
 POSUB = @POSUB@
 PTHREAD_CPPFLAGS = @PTHREAD_CPPFLAGS@
@@ -159,9 +162,9 @@ EXTRA_kadu_SOURCES = simlite.c simlite.h
 
 
 #kadu_METASOURCES = AUTO
-INCLUDES = $(QTINCDIR)
+INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
 kadu_LDADD = $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
-kadu_LDFLAGS = $(PTHREAD_LDFLAGS)
+kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LDFLAGS)
 kadu_DEPENDENCIES = $(SIM)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
