--- a/varia/Makefile.in
+++ b/varia/Makefile.in
@@ -95,7 +95,10 @@ LTLIBICONV = @LTLIBICONV@
 LTLIBINTL = @LTLIBINTL@
 MKINSTALLDIRS = @MKINSTALLDIRS@
 MY_SUBDIRS = @MY_SUBDIRS@
+OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
+OPENSSL_LIBS = @OPENSSL_LIBS@
 PACKAGE = @PACKAGE@
+PKGCONFIG = @PKGCONFIG@
 PNG_LIBS = @PNG_LIBS@
 POSUB = @POSUB@
 PTHREAD_CPPFLAGS = @PTHREAD_CPPFLAGS@
