poprawki i takie tam
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1247 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/debian/rules
+++ b/debian/rules
@@ -86,6 +86,7 @@ binary-arch: build install
 	dh_gencontrol
 	dh_md5sums
 	dh_builddeb
+	cat debian/changelog |sed -e "s/`cat VERSION`/<wersja>/g" > debian/changelog
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install 
