translacja przez qt
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1298 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -94,7 +94,7 @@ am__include = @am__include@
 am__quote = @am__quote@
 docdir = @docdir@
 install_sh = @install_sh@
-subdir = varia
+subdir = translations
 mkinstalldirs = $(SHELL) $(top_srcdir)/admin/mkinstalldirs
 CONFIG_HEADER = $(top_builddir)/config.h
 CONFIG_CLEAN_FILES =
@@ -105,7 +105,7 @@ all: all-am
 .SUFFIXES:
 $(srcdir)/Makefile.in:  Makefile.am  $(top_srcdir)/configure.ac $(ACLOCAL_M4)
 	cd $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu  varia/Makefile
+	  $(AUTOMAKE) --gnu  translations/Makefile
 Makefile:  $(srcdir)/Makefile.in  $(top_builddir)/config.status
 	cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@ $(am__depfiles_maybe)
 uninstall-info-am:
@@ -215,24 +215,14 @@ uninstall-am: uninstall-info-am uninstall-local
 
 
 install-data-local:
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/"	
-	$(INSTALL_DATA) msg.wav "$(DESTDIR)/$(datadir)/apps/kadu/"
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/apps/kadu/icons/"
-	$(INSTALL_DATA) images/*.png "$(DESTDIR)/$(datadir)/apps/kadu/icons/"	
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/"	
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/1/"	
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/1/*.gif "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/1/"
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/1/emots.txt "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/1/"
-
-	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/2/"	
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/2/*.gif "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/2/"
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/2/*.GIF "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/2/"
-	$(INSTALL_DATA) themes/emoticons/gadu-gadu/2/emots.txt "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/2/"
+	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/locale"; \
+	$(INSTALL_DATA) *.ts "$(DESTDIR)/$(datadir)/locale";
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(datadir)/apps/kadu/msg.wav"
-	rm -f "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/1"/*
-	rm -f "$(DESTDIR)/$(datadir)/apps/kadu/themes/emoticons/gadu-gadu/2"/*
+	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_en.ts"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_pl.ts"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/qt_en.ts"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/qt_pl.ts";
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
