--- a/translations/Makefile.am
+++ b/translations/Makefile.am
@@ -1,10 +1,10 @@
 
 install-data-local:
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/locale"; \
-	$(INSTALL_DATA) *.ts "$(DESTDIR)/$(datadir)/locale";
+	$(INSTALL_DATA) *.qm "$(DESTDIR)/$(datadir)/locale";
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_en.ts"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_pl.ts"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_en.ts"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_pl.ts";
+	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_pl.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/qt_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/qt_pl.qm";
