translacja przez qt
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1302 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -216,13 +216,13 @@ uninstall-am: uninstall-info-am uninstall-local
 
 install-data-local:
 	$(mkinstalldirs) "$(DESTDIR)/$(datadir)/locale"; \
-	$(INSTALL_DATA) *.ts "$(DESTDIR)/$(datadir)/locale";
+	$(INSTALL_DATA) *.qm "$(DESTDIR)/$(datadir)/locale";
 
 uninstall-local:
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_en.ts"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_pl.ts"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_en.ts"; \
-	rm -f "$(DESTDIR)/$(datadir)/locale/qt_pl.ts";
+	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/kadu_pl.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/qt_en.qm"; \
+	rm -f "$(DESTDIR)/$(datadir)/locale/qt_pl.qm";
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
