--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -99,7 +99,6 @@ bin_PROGRAMS = kadu
 
 kadu_SOURCES = \
 about.cpp about.h about_moc.cpp \
-adduser.cpp adduser.h adduser_moc.cpp \
 chat.cpp chat.h chat_moc.cpp \
 config_dialog.cpp config_dialog.h config_dialog_moc.cpp \
 config_file.cpp config_file.h \
@@ -155,8 +154,8 @@ CONFIG_CLEAN_FILES =
 bin_PROGRAMS = kadu$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 
-am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) adduser.$(OBJEXT) \
-	adduser_moc.$(OBJEXT) chat.$(OBJEXT) chat_moc.$(OBJEXT) \
+am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) \
+	chat.$(OBJEXT) chat_moc.$(OBJEXT) \
 	config_dialog.$(OBJEXT) config_dialog_moc.$(OBJEXT) \
 	config_file.$(OBJEXT) dcc.$(OBJEXT) dcc_moc.$(OBJEXT) \
 	debug.$(OBJEXT) dock_widget.$(OBJEXT) dock_widget_moc.$(OBJEXT) \
@@ -185,7 +184,6 @@ LIBS = @LIBS@
 depcomp = $(SHELL) $(top_srcdir)/admin/depcomp
 am__depfiles_maybe = depfiles
 @AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/about.Po ./$(DEPDIR)/about_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/adduser.Po ./$(DEPDIR)/adduser_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/chat.Po ./$(DEPDIR)/chat_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_dialog.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/config_dialog_moc.Po \
@@ -278,8 +276,6 @@ distclean-compile:
 
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/about.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/about_moc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/adduser.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/adduser_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/chat_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/config_dialog.Po@am__quote@
