--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -108,6 +108,7 @@ dock_widget.cpp dock_widget.h dock_widget_moc.cpp \
 emoticons.cpp emoticons.h emoticons_moc.cpp \
 events.cpp events.h events_moc.cpp \
 expimp.cpp expimp.h expimp_moc.cpp \
+hints.cpp hints.h hints_moc.cpp \
 history.cpp history.h history_moc.cpp \
 ignore.cpp ignore.h ignore_moc.cpp \
 kadu.cpp kadu.h kadu_moc.cpp \
@@ -154,26 +155,27 @@ CONFIG_CLEAN_FILES =
 bin_PROGRAMS = kadu$(EXEEXT)
 PROGRAMS = $(bin_PROGRAMS)
 
-am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) \
-	chat.$(OBJEXT) chat_moc.$(OBJEXT) \
-	config_dialog.$(OBJEXT) config_dialog_moc.$(OBJEXT) \
-	config_file.$(OBJEXT) dcc.$(OBJEXT) dcc_moc.$(OBJEXT) \
-	debug.$(OBJEXT) dock_widget.$(OBJEXT) dock_widget_moc.$(OBJEXT) \
-	emoticons.$(OBJEXT) emoticons_moc.$(OBJEXT) events.$(OBJEXT) \
-	events_moc.$(OBJEXT) expimp.$(OBJEXT) expimp_moc.$(OBJEXT) \
-	history.$(OBJEXT) history_moc.$(OBJEXT) ignore.$(OBJEXT) \
-	ignore_moc.$(OBJEXT) kadu.$(OBJEXT) kadu_moc.$(OBJEXT) \
-	main.$(OBJEXT) message_box.$(OBJEXT) message_box_moc.$(OBJEXT) \
-	misc.$(OBJEXT) misc_moc.$(OBJEXT) password.$(OBJEXT) \
-	password_moc.$(OBJEXT) pending_msgs.$(OBJEXT) \
-	pending_msgs_moc.$(OBJEXT) personal_info.$(OBJEXT) \
-	personal_info_moc.$(OBJEXT) register.$(OBJEXT) \
-	register_moc.$(OBJEXT) search.$(OBJEXT) search_moc.$(OBJEXT) \
-	sms.$(OBJEXT) sms_moc.$(OBJEXT) sound.$(OBJEXT) \
-	sound_moc.$(OBJEXT) status.$(OBJEXT) status_moc.$(OBJEXT) \
-	tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) userbox.$(OBJEXT) \
-	userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) userinfo_moc.$(OBJEXT) \
-	userlist.$(OBJEXT) userlist_moc.$(OBJEXT) updates.$(OBJEXT)
+am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) chat.$(OBJEXT) \
+	chat_moc.$(OBJEXT) config_dialog.$(OBJEXT) \
+	config_dialog_moc.$(OBJEXT) config_file.$(OBJEXT) dcc.$(OBJEXT) \
+	dcc_moc.$(OBJEXT) debug.$(OBJEXT) dock_widget.$(OBJEXT) \
+	dock_widget_moc.$(OBJEXT) emoticons.$(OBJEXT) \
+	emoticons_moc.$(OBJEXT) events.$(OBJEXT) events_moc.$(OBJEXT) \
+	expimp.$(OBJEXT) expimp_moc.$(OBJEXT) hints.$(OBJEXT) \
+	hints_moc.$(OBJEXT) history.$(OBJEXT) history_moc.$(OBJEXT) \
+	ignore.$(OBJEXT) ignore_moc.$(OBJEXT) kadu.$(OBJEXT) \
+	kadu_moc.$(OBJEXT) main.$(OBJEXT) message_box.$(OBJEXT) \
+	message_box_moc.$(OBJEXT) misc.$(OBJEXT) misc_moc.$(OBJEXT) \
+	password.$(OBJEXT) password_moc.$(OBJEXT) \
+	pending_msgs.$(OBJEXT) pending_msgs_moc.$(OBJEXT) \
+	personal_info.$(OBJEXT) personal_info_moc.$(OBJEXT) \
+	register.$(OBJEXT) register_moc.$(OBJEXT) search.$(OBJEXT) \
+	search_moc.$(OBJEXT) sms.$(OBJEXT) sms_moc.$(OBJEXT) \
+	sound.$(OBJEXT) sound_moc.$(OBJEXT) status.$(OBJEXT) \
+	status_moc.$(OBJEXT) tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) \
+	userbox.$(OBJEXT) userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) \
+	userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
+	userlist_moc.$(OBJEXT) updates.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 
 DEFS = @DEFS@
@@ -194,7 +196,8 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/emoticons.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/emoticons_moc.Po ./$(DEPDIR)/events.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/events_moc.Po ./$(DEPDIR)/expimp.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/expimp_moc.Po ./$(DEPDIR)/history.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/expimp_moc.Po ./$(DEPDIR)/hints.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/hints_moc.Po ./$(DEPDIR)/history.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/history_moc.Po ./$(DEPDIR)/ignore.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/ignore_moc.Po ./$(DEPDIR)/kadu.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/kadu_moc.Po ./$(DEPDIR)/main.Po \
@@ -292,6 +295,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/events_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/expimp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/expimp_moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hints.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/hints_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/history.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/history_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ignore.Po@am__quote@
