--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -45,7 +45,7 @@ endif
 
 INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
 kadu_LDADD = $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
-kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LDFLAGS)
+kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(SIM)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
