--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -139,7 +139,7 @@ EXTRA_kadu_SOURCES = simlite.c simlite.h
 #kadu_METASOURCES = AUTO
 INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
 kadu_LDADD = $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
-kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LDFLAGS)
+kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(SIM)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
