--- a/libgadu/Makefile.in
+++ b/libgadu/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.26 2003/10/09 16:07:16 chilek Exp $
+# $Id: Makefile.in,v 1.27 2003/10/10 19:54:43 adrian Exp $
 
 prefix = @prefix@
 datadir = @datadir@
@@ -14,7 +14,7 @@ INSTALL = @INSTALL@
 
 #
 
-all:	configure libgadu @ekg@ @make_ekgwap@
+all:	libgadu @ekg@ @make_ekgwap@
 
 libgadu:
 	cd lib && $(MAKE) all
