uaktualnienie o voice_dsp
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1415 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -31,7 +31,9 @@ tabbar.cpp tabbar.h tabbar_moc.cpp \
 userbox.cpp userbox.h userbox_moc.cpp \
 userinfo.cpp userinfo.h userinfo_moc.cpp \
 userlist.cpp userlist.h userlist_moc.cpp \
-updates.cpp updates.h
+updates.cpp updates.h \
+voice.cpp voice.h \
+voice_dsp.cpp voice_dsp.h
 
 EXTRA_kadu_SOURCES = simlite.c simlite.h
 
