--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -129,7 +129,7 @@ userinfo.cpp userinfo.h userinfo_moc.cpp \
 userlist.cpp userlist.h userlist_moc.cpp \
 updates.cpp updates.h \
 voice.cpp voice.h \
-sound_dsp.cpp sound_dsp.h
+voice_dsp.cpp voice_dsp.h
 
 
 EXTRA_kadu_SOURCES = simlite.c simlite.h
@@ -179,7 +179,7 @@ am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) chat.$(OBJEXT) \
 	userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
 	userlist_moc.$(OBJEXT) updates.$(OBJEXT) \
 	voice.$(OBJEXT) voice_moc.$(OBJEXT) \
-	sound_dsp.$(OBJEXT) sound_dsp_moc.$(OBJEXT)
+	voice_dsp.$(OBJEXT) voice_dsp_moc.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 
 DEFS = @DEFS@
@@ -224,7 +224,7 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/userinfo.Po ./$(DEPDIR)/userinfo_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlist.Po ./$(DEPDIR)/userlist_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/voice.Po ./$(DEPDIR)/voice_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/sound_dsp.Po ./$(DEPDIR)/sound_dsp_moc.Po
+@AMDEP_TRUE@	./$(DEPDIR)/voice_dsp.Po ./$(DEPDIR)/voice_dsp_moc.Po
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
@@ -342,8 +342,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userlist_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice_moc.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sound_dsp.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/sound_dsp_moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice_dsp.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice_dsp_moc.Po@am__quote@
 
 distclean-depend:
 	-rm -rf ./$(DEPDIR)
