--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -46,7 +46,7 @@ endif
 #kadu_METASOURCES = AUTO
 
 INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
-kadu_LDADD = $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
+kadu_LDADD = $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu -lgsm
 kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
 kadu_DEPENDENCIES = $(SIM)
 
