--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -128,8 +128,8 @@ userbox.cpp userbox.h userbox_moc.cpp \
 userinfo.cpp userinfo.h userinfo_moc.cpp \
 userlist.cpp userlist.h userlist_moc.cpp \
 updates.cpp updates.h \
-voice.cpp voice.h \
-voice_dsp.cpp voice_dsp.h
+voice.cpp voice.h voice_moc.cpp \
+voice_dsp.cpp voice_dsp.h voice_dsp_moc.cpp
 
 
 EXTRA_kadu_SOURCES = simlite.c simlite.h
@@ -177,9 +177,8 @@ am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) chat.$(OBJEXT) \
 	status_moc.$(OBJEXT) tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) \
 	userbox.$(OBJEXT) userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) \
 	userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
-	userlist_moc.$(OBJEXT) updates.$(OBJEXT) \
-	voice.$(OBJEXT) voice_moc.$(OBJEXT) \
-	voice_dsp.$(OBJEXT) voice_dsp_moc.$(OBJEXT)
+	userlist_moc.$(OBJEXT) updates.$(OBJEXT) voice.$(OBJEXT) \
+	voice_moc.$(OBJEXT) voice_dsp.$(OBJEXT) voice_dsp_moc.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 
 DEFS = @DEFS@
