--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -75,6 +75,8 @@ CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+LIBGSM_INCLUDES = @LIBGSM_INCLUDES@
+LIBGSM_LIBS = @LIBGSM_LIBS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
 OPENSSL_LIBS = @OPENSSL_LIBS@
@@ -127,12 +129,20 @@ tabbar.cpp tabbar.h tabbar_moc.cpp \
 userbox.cpp userbox.h userbox_moc.cpp \
 userinfo.cpp userinfo.h userinfo_moc.cpp \
 userlist.cpp userlist.h userlist_moc.cpp \
-updates.cpp updates.h \
+updates.cpp updates.h
+
+
+EXTRA_kadu_SOURCES = \
 voice.cpp voice.h voice_moc.cpp \
-voice_dsp.cpp voice_dsp.h voice_dsp_moc.cpp
+voice_dsp.cpp voice_dsp.h voice_dsp_moc.cpp \
+simlite.c simlite.h
 
 
-EXTRA_kadu_SOURCES = simlite.c simlite.h
+@VOICE_TRUE@VOICE_OBJS = \
+@VOICE_TRUE@voice.$(OBJEXT) voice_moc.$(OBJEXT) \
+@VOICE_TRUE@voice_dsp.$(OBJEXT) voice_dsp_moc.$(OBJEXT)
+
+@VOICE_FALSE@VOICE_OBJS = 
 
 @OPENSSL_TRUE@SIM = simlite.$(OBJEXT)
 @OPENSSL_FALSE@SIM = 
@@ -140,9 +150,9 @@ EXTRA_kadu_SOURCES = simlite.c simlite.h
 
 #kadu_METASOURCES = AUTO
 INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
-kadu_LDADD = $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu -lgsm
-kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS)
-kadu_DEPENDENCIES = $(SIM)
+kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
+kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS) $(GSM_LIBS)
+kadu_DEPENDENCIES = $(VOICE_OBJS) $(SIM)
 
 AM_CPPFLAGS = $(PTHREAD_CPPFLAGS) -DQT_THREAD_SUPPORT -D_REENTRANT \
 -DBINDIR="\"$(bindir)\"" -DDATADIR="\"$(datadir)\"" -DDOCDIR="\"$(docdir)\""
@@ -177,8 +187,7 @@ am_kadu_OBJECTS = about.$(OBJEXT) about_moc.$(OBJEXT) chat.$(OBJEXT) \
 	status_moc.$(OBJEXT) tabbar.$(OBJEXT) tabbar_moc.$(OBJEXT) \
 	userbox.$(OBJEXT) userbox_moc.$(OBJEXT) userinfo.$(OBJEXT) \
 	userinfo_moc.$(OBJEXT) userlist.$(OBJEXT) \
-	userlist_moc.$(OBJEXT) updates.$(OBJEXT) voice.$(OBJEXT) \
-	voice_moc.$(OBJEXT) voice_dsp.$(OBJEXT) voice_dsp_moc.$(OBJEXT)
+	userlist_moc.$(OBJEXT) updates.$(OBJEXT)
 kadu_OBJECTS = $(am_kadu_OBJECTS)
 
 DEFS = @DEFS@
@@ -222,8 +231,9 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/userbox.Po ./$(DEPDIR)/userbox_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userinfo.Po ./$(DEPDIR)/userinfo_moc.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/userlist.Po ./$(DEPDIR)/userlist_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/voice.Po ./$(DEPDIR)/voice_moc.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/voice_dsp.Po ./$(DEPDIR)/voice_dsp_moc.Po
+@AMDEP_TRUE@	./$(DEPDIR)/voice.Po ./$(DEPDIR)/voice_dsp.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/voice_dsp_moc.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/voice_moc.Po
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 CCLD = $(CC)
@@ -340,9 +350,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userlist.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/userlist_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice_moc.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice_dsp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice_dsp_moc.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/voice_moc.Po@am__quote@
 
 distclean-depend:
 	-rm -rf ./$(DEPDIR)
