--- a/translations/Makefile.in
+++ b/translations/Makefile.in
@@ -75,6 +75,8 @@ CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
+LIBGSM_INCLUDES = @LIBGSM_INCLUDES@
+LIBGSM_LIBS = @LIBGSM_LIBS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
 OPENSSL_LIBS = @OPENSSL_LIBS@
