--- a/Makefile.in
+++ b/Makefile.in
@@ -74,9 +74,9 @@ AWK = @AWK@
 CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
+GSM_INCLUDES = @GSM_INCLUDES@
+GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-LIBGSM_INCLUDES = @LIBGSM_INCLUDES@
-LIBGSM_LIBS = @LIBGSM_LIBS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
 OPENSSL_LIBS = @OPENSSL_LIBS@
