--- a/kadu/Makefile.am
+++ b/kadu/Makefile.am
@@ -54,7 +54,7 @@ endif
 
 #kadu_METASOURCES = AUTO
 
-INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
+INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES) $(GSM_INCLUDES)
 kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
 kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS) $(GSM_LIBS)
 kadu_DEPENDENCIES = $(VOICE_OBJS) $(SIM)
