--- a/kadu/Makefile.in
+++ b/kadu/Makefile.in
@@ -74,9 +74,9 @@ AWK = @AWK@
 CC = @CC@
 CXX = @CXX@
 DEPDIR = @DEPDIR@
+GSM_INCLUDES = @GSM_INCLUDES@
+GSM_LIBS = @GSM_LIBS@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-LIBGSM_INCLUDES = @LIBGSM_INCLUDES@
-LIBGSM_LIBS = @LIBGSM_LIBS@
 MY_SUBDIRS = @MY_SUBDIRS@
 OPENSSL_INCLUDES = @OPENSSL_INCLUDES@
 OPENSSL_LIBS = @OPENSSL_LIBS@
@@ -149,7 +149,7 @@ simlite.c simlite.h
 
 
 #kadu_METASOURCES = AUTO
-INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES)
+INCLUDES = $(QTINCDIR) $(OPENSSL_INCLUDES) $(GSM_INCLUDES)
 kadu_LDADD = $(VOICE_OBJS) $(SIM) $(PTHREAD_LIBS) $(PNG_LIBS) $(QTLIBDIR) -l$(QTMT) $(LIBINTL) -lgadu
 kadu_LDFLAGS = $(PTHREAD_LDFLAGS) $(OPENSSL_LIBS) $(GSM_LIBS)
 kadu_DEPENDENCIES = $(VOICE_OBJS) $(SIM)
